# pylint-sarif

./: LICENSE  README.md  pylint2cso.py  pylint2sarif.py  pyproject.toml  sarif-schema.json
.github/: dependabot.yml
.github/workflows/: pylint.yml
src/: sarif-schema.json
